2008-06-14 Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: New. Extension methods for Instruction.

2008-05-17 Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: New. Extension methods for ModuleDefinition.

2008-04-27 Jb Evain  <jbevain@novell.com>

	* MethodRocks.cs: Add a IsEventCallback method rock. Used
	to detect methods whose signature are of the form:
	void Method (object sender, EventArgs ea).

2008-03-30 Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Handle generic interfaces in Implements.

2008-03-30 Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Don't break but continue if parameters don't match.
	There could be a matching overload just waiting to be found.

2008-03-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Add null check in Resolve.

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Add Contains[Any]Type method extentions for 
	TypeReferenceCollection

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* AssemblyRocks.cs: Add References rock.
	* CommonRocks.cs: Add AddRangeIfNew<T> rock.
	* TypeRocks.cs: re-enable Gendarme.Framework.Helpers

2008-02-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* FieldRocks.cs: Add Resolve (FieldReference to FieldDefinition) and
	change other rocks to accept FieldReference (and Resolve themselves).
	* MethodRocks.cs: Add Resolve (MethodReference to MethodDefinition) 
	and change other rocks to accept MethodReference (and Resolve 
	themselves).
	* TypeRocks.cs: Add Resolve (TypeReference to TypeDefinition) and
	change other rocks to accept TypeReference (and Resolve themselves).

2008-02-14  Sebastien Pouliot  <sebastien@ximian.com>

	* CecilRocks.cs: New. Shared rocks on other Cecil types 
	(IMetadataTokenProviderRock).
	* CustomAttributeRocks.cs: Fix exception argument.
	* TypeRocks.cs: Added AllMethods to return an IEnumerable with
	all methods *and* constructors. Fixed GetMethod methods to use it.