@@ -1,3 +1,8 @@
+2008-06-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* InstructionRocks.cs: Add GetOperand rock to simplify the analysis
+	of macro instructions.
+
 2008-06-14 Sebastien Pouliot  <sebastien@ximian.com>
 
 	* InstructionRocks.cs: New. Extension methods for Instruction.
